# xspatula-lite

./: .gitignore  README.md  pyproject.toml
docs/: legacy-contract-inventory.md
src/xspatula_lite/: __init__.py  cli.py  core.py  database.py  dispatcher.py  exceptions.py  io.py  jobs.py  models.py  pilot.py  process_files.py  process_registry.py  registry.py  scheme.py  utils.py
src/xspatula_lite/handlers/: __init__.py  setup_handlers.py
src/xspatula_lite/operations/: __init__.py  db_setup.py
tests/: test_import.py  test_legacy_registry.py  test_mock_workflow.py  test_scheme_loader.py  test_utils.py
tests/fixtures/schemes/: minimal_scheme.json
