[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xspatula-lite"
version = "0.1.0"
description = "A lightweight metadata-driven workflow engine inspired by Xspatula."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kamran Hatami" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]